--- a/page1/style.css
+++ b/page1/style.css
@@ -10,6 +10,7 @@
     --fs-30: 1.875rem;
     /* Palette */
     --main-black: #1A1818;
+    --hover: #DADAD8;
 }
 *,
 ::before,
@@ -73,7 +74,6 @@ header {
     text-decoration: none;
     color: inherit;
 }
-
 main {
     max-width: 1100px;
     margin: 0 auto;
@@ -169,6 +169,9 @@ main {
 .button-dark {
     background-color: #7D7D8F;
 }
+.button:hover {
+    background: var(--hover);
+}
 .project-info {
     display: flex;
     justify-content: space-between;
@@ -188,10 +191,7 @@ main {
 .contact-me:hover::after {
     content: attr(data-email);
 }
-.slider-container {
-    width: 100vw;
-    overflow: hidden;
-}
+
 
 /* Responsive */
 
@@ -219,7 +219,12 @@ main {
         flex-direction: column!important;
     }
     .card {
+        width: 56%;
+        height: 500px!important;
         margin: 0 auto 10px auto!important;
+    }
+    .image-container {
+        height: 455px!important;
     }
     .intro {
         font-size: var(--fs-24)!important;
@@ -265,21 +270,33 @@ main {
     .left-section {
         padding: 13px 0;
     }
+    .card {
+        height: 450px!important;
+    }
+    .image-container {
+        height: 405px!important;
+    }
 }
 
 /* Bottom slider */
+
 .slider {
     text-transform: uppercase;
     display: inline-block;
     white-space: nowrap;
     animation: defilement 20s linear infinite;
     cursor: pointer;
+    bottom: 0;
+    position: fixed; 
 }
 .slider-light {
     background: #ECE7E1;
 }
 .slider-dark {
     background: #7D7D8F;
+}
+.slider-container {
+    overflow: hidden;
 }
 @keyframes defilement {
     0% {
