--- a/projet-barber/style-barber.css
+++ b/projet-barber/style-barber.css
@@ -140,7 +140,7 @@ h2 {
     text-transform: uppercase;
 }
 .project-card {
-    background-color: #98A0A9;
+    background-color: #896C66;
     overflow: hidden;
     padding: 15px;
 }
@@ -278,7 +278,7 @@ h2 {
     }
     .project-card.carte {
         flex-direction: column;
-        height: 1200px;
+        height: 1000px;
     }
     .image12 {
         padding: 0 0 15px 0;
