--- a/projet-creyda/style-creyda.css
+++ b/projet-creyda/style-creyda.css
@@ -175,28 +175,39 @@ h2 {
 .responsive {
     margin-bottom: 30px;
 }
-.carte {
-    height: 1000px;
-    padding: 15px 0 0 15px;
+.project-card.carte {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    height: 1000px;
+    padding: 15px;
     margin-bottom: 70px;
 }
 .line {
     display: flex;
-    justify-content: space-between;
-    height: 50%;
+    gap: 15px;
+    margin-bottom: 15px;
+    height: 49%;
 }
-.photo {
+.image12,
+.image34 {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
     flex: 1;
+    height: 100%;
+} 
+.image12 .photo,
+.image34 .photo {
+    flex: 1;
+    overflow: hidden;
+    height: 100%;
 }
-.photo img {
-    padding: 0 15px 15px 0;
-    object-position: top;
+.image12 .photo img,
+.image34 .photo img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: top;
 }
 .check {
    display: flex;
@@ -222,6 +233,155 @@ h2 {
     background: var(--hover);
 }
 
+/* Responsive */
+
+@media screen and (max-width: 1200px) {
+    main {
+        max-width: 920px!important;
+    }
+    .project-card.carte {
+        height: 850px;
+      }
+}
+@media screen and (max-width: 970px) {
+    main {
+        max-width: 620px !important;
+    }
+    .project-card-dev {
+        height: 593px;
+    }
+    .dark-light-button {
+        height: 20px !important;
+        bottom: 40px !important;
+        left: 40px !important;
+    }
+    .project-card-desktop {
+        height: 830px;
+        flex-direction: column;
+    }
+    .image-container {
+        width: 100%;
+        overflow: hidden;
+    }
+    .image-container img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: top;
+    }
+    .image-container:nth-child(1) {
+        padding: 0 0 15px 0 !important;
+    }
+    .project-card.carte {
+        flex-direction: column;
+        height: 1000px;
+    }
+    .line {
+        flex-wrap: wrap;
+        height: 100%;
+    }
+    .image12,
+    .image34 {
+        height: 100%;
+        width: 50%; 
+        flex-direction: column;
+    }
+    .image12 .photo img,
+    .image34 .photo img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: top;
+    }
+    .line:nth-of-type(2) {
+        display: none; 
+      }
+    .project-info {
+        font-size: var(--fs-18);
+    }
+    .project-container {
+        font-size: var(--fs-24);
+    }
+    h2 {
+        font-size: var(--fs-24);
+    }
+    .project-resp {
+        font-size: var(--fs-18);
+    }
+    .project-url {
+        font-size: var(--fs-18);
+    }
+    h1 {
+        font-size:var(--fs-30);
+    }
+}
+@media screen and (max-width: 628px) {
+    main {
+        max-width: 340px!important;
+    }
+    header {
+      flex-direction: column;
+    }
+    .right-section {
+        border-left: none;
+        border-top: var(--main-black) solid 3px;
+        width: 100%;
+        padding: 13px 0;
+    }
+    .left-section {
+        padding: 13px 0;
+    }
+    .project-card-video {
+        margin-bottom: 50px;
+    }
+    .project-card-desktop {
+        height: 710px;
+        margin-bottom: 50px;
+    }
+    .image-container img {
+        width: 140%;
+    }
+    .project-card.carte {
+        height: 1790px;
+        margin-bottom: 50px;
+    }
+    .line {
+        flex-direction: column;
+    }
+    .image12,
+    .image34 {
+        height: 49%;
+        width: 100%;
+    }
+    .image-container-dev img {
+        width: 180%;
+    }
+    .project-container {
+        flex-direction: column;
+        margin-bottom: 50px;
+    }
+    .project-resp {
+        width: 100%;
+        text-align: left;
+        margin-bottom: 30px;
+    }
+    .project-url {
+        width: 100%;
+        margin-left: 0;
+    }
+    .project-info {
+        margin: 50px 0 50px 0;
+    }
+    h1 {
+        margin-top: 50px;
+    }
+    .button {
+        margin-bottom: 50px;
+    }
+    .responsive {
+        text-align: justify;
+    }
+}
 
 
 
