--- a/John-Scissors-project/style-john-scissors-project.css
+++ b/John-Scissors-project/style-john-scissors-project.css
@@ -10,7 +10,7 @@
     --fs-30: 1.875rem;
     /* Palette */
     --hover: #DADAD8;
-    /* Light */
+        /* Light */
     --light-bg: rgba(147,167,181,1) 00%, rgba(236,231,225,1) 100%;
     --light-startColorstr: #93a7b5;
     --light-endColorstr: #ece7e1;
@@ -53,7 +53,7 @@ body {
 .body-light {
     background: -moz-linear-gradient(351deg, var(--light-bg));
     background: -webkit-linear-gradient(351deg, var(--light-bg));
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="var(light-startColorstr)",endColorstr="var(light-endColorstr)",GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="var(light-startColorstr)",endColorstr="var(light-endColorstr",GradientType=1);
     background: linear-gradient(351deg, var(--light-bg));
     color: var(--main-black);
 }
@@ -75,9 +75,6 @@ body {
 }
 .right-light {
     border-left: var(--main-black) solid 3px;
-}
-.right-dark {
-    border-left: white solid 3px;
 }
 .right-section a {
     text-decoration: none;
@@ -160,7 +157,7 @@ h2 {
     text-transform: uppercase;
 }
 .project-card {
-    background-color: #252525;
+    background-color: #896C66;
     overflow: hidden;
     padding: 15px;
 }
@@ -180,6 +177,7 @@ h2 {
     height: 400px;
     margin-bottom: 70px;
     display: flex;
+    pointer-events: none;
 }
 .image-container {
     width: 50%;
@@ -196,38 +194,43 @@ h2 {
     margin-bottom: 30px;
 }
 .project-card.carte {
-    display: flex;
-    flex-direction: column;
-    height: 1000px;
-    padding: 15px;
-    margin-bottom: 70px;
+  display: flex;
+  height: 790px;
+  padding: 15px;
+  margin-bottom: 70px;
+  pointer-events: none;
 }
-.line {
-    display: flex;
-    gap: 15px;
-    margin-bottom: 15px;
-    height: 49%;
+.image12 {
+    padding-right: 15px;
 }
 .image12,
 .image34 {
-    display: flex;
-    flex-direction: row;
-    gap: 15px;
-    flex: 1;
-    height: 100%;
-} 
+  display: flex;
+  gap: 15px;
+}
 .image12 .photo,
 .image34 .photo {
-    flex: 1;
-    overflow: hidden;
-    height: 100%;
+  flex: 1;
+  overflow: hidden;
 }
 .image12 .photo img,
 .image34 .photo img {
-    width: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.project-card-dev {
+    height: 700px;
+    padding: 15px;
+    margin-bottom: 70px;
+    display: flex;
+}
+.image-container-dev {
     height: 100%;
-    object-fit: cover;
-    object-position: top;
+    overflow: hidden;
+}
+.image-container-dev img {
+    width: 100%;
 }
 .check {
    display: flex;
@@ -257,7 +260,7 @@ h2 {
         max-width: 920px!important;
     }
     .project-card.carte {
-        height: 850px;
+        height: 650px;
       }
 }
 @media screen and (max-width: 970px) {
@@ -293,26 +296,25 @@ h2 {
         flex-direction: column;
         height: 1000px;
     }
-    .line {
-        flex-wrap: wrap;
-        height: 100%;
+    .image12 {
+        padding: 0 0 15px 0;
     }
     .image12,
     .image34 {
+        flex-direction: row;
+        width: 100%;
         height: 100%;
-        width: 50%; 
-        flex-direction: column;
+        overflow: hidden;
     }
     .image12 .photo img,
     .image34 .photo img {
         width: 100%;
-        height: 100%;
+        height: auto;
         object-fit: cover;
-        object-position: top;
     }
-    .line:nth-of-type(2) {
-        display: none; 
-      }
+    .image-container-dev img {
+        width: 130%;
+    }
     .project-info {
         font-size: var(--fs-18);
     }
@@ -356,24 +358,30 @@ h2 {
     .project-card-video {
         margin-bottom: 50px;
     }
-    .project-card-desktop {
-        height: 897px;
+    .project-card-dev {
+        height: 360px;
         margin-bottom: 50px;
     }
-    .image-container img {
-        width: 140%;
+    .image-container-dev img {
+        width: 210%;
+    }
+    .project-card-desktop {
+        height: 710px;
+        margin-bottom: 50px;
     }
     .project-card.carte {
         height: 1790px;
         margin-bottom: 50px;
     }
-    .line {
-        flex-direction: column;
-    }
     .image12,
     .image34 {
-        height: 49%;
-        width: 100%;
+        flex-direction: column;
+        gap: 15px;
+    }
+    .image12 .photo,
+    .image34 .photo {
+        flex: 1;
+        overflow: hidden;
     }
     .image-container-dev img {
         width: 180%;
@@ -435,6 +443,7 @@ h2 {
 .slider:hover {
     animation: defilement 25s linear infinite;
 }
+
 
 /* Flying bird animation */
 
