--- a/Gradient-generator-project/style-gradient-generator.css
+++ b/Gradient-generator-project/style-gradient-generator.css
@@ -49,8 +49,6 @@ body {
     min-height: 100%;
     height: 100vh;
     overflow-x: hidden!important;
-}
-.body-light {
     background: -moz-linear-gradient(351deg, var(--light-bg));
     background: -webkit-linear-gradient(351deg, var(--light-bg));
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="var(light-startColorstr)",endColorstr="var(light-endColorstr)",GradientType=1);
@@ -62,8 +60,6 @@ body {
     justify-content: space-between;
     align-items: center;
     position: relative;
-}
-.header-light {
     border-bottom: 3px solid var(--main-black);
 }
 .left-section {
@@ -72,8 +68,6 @@ body {
 .right-section {
     text-align: center;
     padding: 25px 60px;
-}
-.right-light {
     border-left: var(--main-black) solid 3px;
 }
 .right-section a {
@@ -107,8 +101,6 @@ main {
     height: 100%;
     box-sizing: border-box;
     overflow: auto;
-}
-.border-light {
     border: 3px solid var(--main-black);
 }
 .dark-light-button {
@@ -121,11 +113,15 @@ main {
 }
 h1 {
     margin: 70px 0 70px 0;
+    text-transform: uppercase;
 }
 .project-info {
     font-size: var(--fs-20);
     text-align: justify;
     margin: 50px 0 70px 0;
+}
+p {
+    text-align: justify;
 }
 .project-container {
     display: flex;
@@ -155,6 +151,12 @@ h2 {
 }
 .project-url a:hover {
     text-transform: uppercase;
+}
+.video-placeholder {
+    width: 100%;
+    height: 620px;
+    object-fit: cover;
+    object-position: center;
 }
 .project-card {
     background-color: #3d3d3d;
@@ -213,8 +215,6 @@ h2 {
     text-decoration: none;
     color: inherit;
     margin-bottom: 70px;
-}
-.button-light {
     background-color: var(--light-element);
 }
 .button:hover {
@@ -297,8 +297,6 @@ h2 {
         border-left: none;
         width: 100%;
         padding: 13px 0;
-    }
-    .right-light {
         border-top: var(--main-black) solid 3px;
     }
     .left-section {
@@ -360,8 +358,6 @@ h2 {
     animation: defilement 20s linear infinite;
     cursor: pointer;
     bottom: 0;
-}
-.slider-light {
     background: var(--light-element);
 }
 .slider-container {
