--- a/John-Scissors-project/style-john-scissors-project.css
+++ b/John-Scissors-project/style-john-scissors-project.css
@@ -49,8 +49,6 @@ body {
     min-height: 100%;
     height: 100vh;
     overflow-x: hidden!important;
-}
-.body-light {
     background: -moz-linear-gradient(351deg, var(--light-bg));
     background: -webkit-linear-gradient(351deg, var(--light-bg));
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="var(light-startColorstr)",endColorstr="var(light-endColorstr",GradientType=1);
@@ -62,8 +60,6 @@ body {
     justify-content: space-between;
     align-items: center;
     position: relative;
-}
-.header-light {
     border-bottom: 3px solid var(--main-black);
 }
 .left-section {
@@ -72,8 +68,6 @@ body {
 .right-section {
     text-align: center;
     padding: 25px 60px;
-}
-.right-light {
     border-left: var(--main-black) solid 3px;
 }
 .right-section a {
@@ -95,6 +89,9 @@ nav {
     text-decoration: none;
     color: inherit;
 }
+p {
+    text-align: justify;
+}
 main {
     max-width: 1100px;
     margin: 0 auto;
@@ -107,8 +104,6 @@ main {
     height: 100%;
     box-sizing: border-box;
     overflow: auto;
-}
-.border-light {
     border: 3px solid var(--main-black);
 }
 .dark-light-button {
@@ -121,6 +116,7 @@ main {
 }
 h1 {
     margin: 70px 0 70px 0;
+    text-transform: uppercase;
 }
 .project-info {
     font-size: var(--fs-20);
@@ -155,6 +151,12 @@ h2 {
 }
 .project-url a:hover {
     text-transform: uppercase;
+}
+.video-placeholder {
+    width: 100%;
+    height: 620px;
+    object-fit: cover;
+    object-position: top;
 }
 .project-card {
     background-color: #896C66;
@@ -245,8 +247,6 @@ h2 {
     text-decoration: none;
     color: inherit;
     margin-bottom: 70px;
-}
-.button-light {
     background-color: var(--light-element);
 }
 .button:hover {
@@ -348,8 +348,6 @@ h2 {
         border-left: none;
         width: 100%;
         padding: 13px 0;
-    }
-    .right-light {
         border-top: var(--main-black) solid 3px;
     }
     .left-section {
@@ -425,8 +423,6 @@ h2 {
     animation: defilement 20s linear infinite;
     cursor: pointer;
     bottom: 0;
-}
-.slider-light {
     background: var(--light-element);
 }
 .slider-container {
