--- a/Gradient-generator-project/style-gradient-generator.css
+++ b/Gradient-generator-project/style-gradient-generator.css
@@ -176,7 +176,7 @@ h2 {
     object-position: center;
 }
 .project-card-desktop {
-    height: 344px;
+    height: 422px;
     margin-bottom: 70px;
     display: flex;
     pointer-events: none;
@@ -191,7 +191,9 @@ h2 {
 .image-container img {
     width: 100%;
     display: block;
-    transform: translate(0%, -8%);
+    height: 127%;
+    object-fit: cover;
+    transform: translateY(-11%);
 }
 .responsive {
     margin-bottom: 30px;
@@ -230,8 +232,8 @@ h2 {
     .project-card.carte {
         height: 650px;
     }
-    .image-container img {
-        transform: translate(0%, 0%);
+    .project-card-desktop {
+        height: 458px;
     }
 }
 @media screen and (max-width: 970px) {
@@ -306,7 +308,7 @@ h2 {
         margin-bottom: 50px;
     }
     .project-card-desktop {
-        height: 500px;
+        height: 1058px;
         margin-bottom: 50px;
     }
     .project-card.carte {
@@ -339,10 +341,10 @@ h2 {
         text-align: justify;
     }
     .image-container img {
-        width: 177%;
+        width: 260%;
         height: 100%;
         object-fit: cover;
-        transform: translate(-20%, 0%);
+        transform: translate(-31%, 0%);
     }
     .bird-container {
         animation-duration: 15s!important;
